--- a/partials/header.handlebars
+++ b/partials/header.handlebars
@@ -4,14 +4,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="News that matter to you, right in the today tab.">
+		<meta name="description" content="News that matter to you, right in the today view.">
         <meta name="keywords" content="breaking,news,today,widget,view,mac,osx,apple,rss,feed">
-        <title>Breaking ~ Short News in your Today tab</title>
+        <title>Breaking ~ Short News in your Today view</title>
 
-        <meta name="og:title" content="Breaking ~ Short News in your Today tab" />
+        <meta name="og:title" content="Breaking ~ Short News in your Today view" />
         <meta name="og:site_name" content="Breaking" />
         <meta name="og:url" content="http://itsbreaking.com" />
-        <meta name="og:description" content="News that matter to you, right in the today tab." />
+        <meta name="og:description" content="News that matter to you, right in the today view." />
         <meta name="og:image" content="{{{config.imgpath}}}/icon-osx.png" />
         <meta name="og:locale" content="en_US" />
         <meta name="og:type" content="website" />
