--- a/index.handlebars
+++ b/index.handlebars
@@ -1,6 +1,9 @@
 {{> header }}
 
 <div class="header-container cont">
+	<div class="hover">
+		
+	</div>
 	<div class="video-overlay" id="video-overlay" data-animation-state="out">
 		<div class="video-container" id="video-container">
 			<iframe id="headervid" src="//player.vimeo.com/video/120421420?api=1&player_id=headervid&color=fee26d&title=0&byline=0&portrait=0" width="1080" height="608" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen data-animation-state="out"></iframe>
@@ -11,6 +14,27 @@
 		{{{ img "what-if.png" }}}
 		<span>&nbsp;</span>
 		{{{ img "button-play.png" true "play" }}}
+	</div>
+	<div class="sharebar-container cont" id="share-container" data-animation-state="in">
+		<div class="sharebar int">
+			<div class="inner">
+				<p>Help us change how we read news</p>
+				<div class="actions">
+					<a href="#share"
+						class="button share facebook"
+						title="Share Breaking on Facebook"
+						onClick="sendEvent('button', 'clicked', 'share-facebook');">
+						Share on Facebook
+					</a>
+					<a href="#share"
+						class="button share twitter"
+						title="Share Breaking on Twitter"
+						onClick="sendEvent('button', 'clicked', 'share-twitter');">
+						Share on Twitter
+					</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
@@ -59,7 +83,7 @@
 
 <div class="yosemite-cont cont">
 	<div class="yosemite-int int">
-		<h3>Breaking let’s you add <br>news feeds to your Today view</h3>
+		<h3>Breaking lets you add <br>news feeds to your Today view</h3>
 		<p>Add local news, your favorite blogs or anything else that comes with a feed as a Today view widget in OS X Yosemite &amp; iOS 8. Breaking is an easy, uncluttered way of staying on top of what’s new in your world.</p>
 		{{{ img "interface-osx.png" true "interface" }}}
 	</div>
@@ -154,8 +178,8 @@
 			<div class="icon">
 				{{{ img "feature-featured.png" }}}
 			</div>
-			<h3>Build for Yosemite</h3>
-			<p>Breaking was build specifically for digesting news on OS X Yosemite.</p>
+			<h3>Build for Yosemite &amp; iOS 8</h3>
+			<p>Breaking was build specifically for digesting news on OS X Yosemite and iOS 8.</p>
 			<div class="clear"></div>
 		</div>
 		
