fixed header hover

--- a/index.handlebars
+++ b/index.handlebars
@@ -1,7 +1,7 @@
 {{> header }}
 
 <div class="header-container cont">
-	<div class="hover">
+	<div class="hover" id="header-hover">
 		
 	</div>
 	<div class="video-overlay" id="video-overlay" data-animation-state="out">
