--- a/partials/header.handlebars
+++ b/partials/header.handlebars
@@ -12,9 +12,18 @@
         <meta name="og:site_name" content="Breaking" />
         <meta name="og:url" content="http://itsbreaking.com" />
         <meta name="og:description" content="News that matter to you, right in the today view." />
-        <meta name="og:image" content="{{{config.imgpath}}}/icon-osx.png" />
+        <meta name="og:image" content="{{{config.imgpath}}}/shareimage.jpg" />
         <meta name="og:locale" content="en_US" />
         <meta name="og:type" content="website" />
+
+        <meta name="twitter:card" content="app">
+        <meta name="twitter:site" content="@robocat">
+        <meta name="twitter:description" content="News that matter to you, right in the today view.">
+        <meta name="twitter:app:country" content="US">
+        <meta name="twitter:app:name:iphone" content="Breaking">
+        <meta name="twitter:app:id:iphone" content="953959186">
+        <meta name="twitter:app:name:ipad" content="Breaking">
+        <meta name="twitter:app:id:ipad" content="953959186">
     	
         <link rel='stylesheet' href='css/main.css'>
 
