--- a/index.handlebars
+++ b/index.handlebars
@@ -21,12 +21,14 @@
 				<p>Help us change how we read news</p>
 				<div class="actions">
 					<a href="#share"
+						id="fb_share"
 						class="button share facebook"
-						title="Share Breaking on Facebook"
-						onClick="sendEvent('button', 'clicked', 'share-facebook');">
+						title="Share Breaking on Facebook">
 						Share on Facebook
 					</a>
-					<a href="#share"
+					<a href="https://twitter.com/home?status=News%20that%20matters%20to%20you,%20right%20in%20the%20Today%20view.%20http://itsbreaking.com%20http://itsbreaking.com/images/shareimage.jpg"
+						id="tw_share"
+						target="_blank"
 						class="button share twitter"
 						title="Share Breaking on Twitter"
 						onClick="sendEvent('button', 'clicked', 'share-twitter');">
@@ -83,7 +85,7 @@
 
 <div class="yosemite-cont cont">
 	<div class="yosemite-int int">
-		<h3>Breaking lets you add <br>news feeds to your Today view</h3>
+		<h3>Breaking lets you add <br> news feeds to your Today view</h3>
 		<p>Add local news, your favorite blogs or anything else that comes with a feed as a Today view widget in OS X Yosemite &amp; iOS 8. Breaking is an easy, uncluttered way of staying on top of what’s new in your world.</p>
 		{{{ img "interface-osx.png" true "interface" }}}
 	</div>
@@ -178,8 +180,8 @@
 			<div class="icon">
 				{{{ img "feature-featured.png" }}}
 			</div>
-			<h3>Build for Yosemite &amp; iOS 8</h3>
-			<p>Breaking was build specifically for digesting news on OS X Yosemite and iOS 8.</p>
+			<h3>Built for Yosemite &amp; iOS 8</h3>
+			<p>Breaking was built specifically for digesting news on OS X Yosemite and iOS 8.</p>
 			<div class="clear"></div>
 		</div>
 		
