--- a/partials/footer.handlebars
+++ b/partials/footer.handlebars
@@ -13,5 +13,22 @@
 	</script>
 	<script src="js/vendor.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/app.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script>
+          window.fbAsyncInit = function() {
+            FB.init({
+              appId      : '608129299287211',
+              xfbml      : true,
+              version    : 'v2.1'
+            });
+          };
+
+          (function(d, s, id){
+             var js, fjs = d.getElementsByTagName(s)[0];
+             if (d.getElementById(id)) {return;}
+             js = d.createElement(s); js.id = id;
+             js.src = "//connect.facebook.net/en_US/sdk.js";
+             fjs.parentNode.insertBefore(js, fjs);
+           }(document, 'script', 'facebook-jssdk'));
+        </script>
 </body>
 </html>
