Fixed missing spaces when forced line-breaks are hidden

--- a/index.handlebars
+++ b/index.handlebars
@@ -42,8 +42,8 @@
 
 <div class="devices-container cont">
 	<div class="devices int">
-		<h2>News that matters to you,<br> right in the Today view.</h2>
-		<h3>The latest stories will always be there when you <br>have time for them, a single gesture away.</h3>
+		<h2>News that matters to you,<br>&nbsp;right in the Today view.</h2>
+		<h3>The latest stories will always be there when you&nbsp;<br>have time for them, a single gesture away.</h3>
 		<a href="#appstore" id="download" class="download">Get it now</span></a>
 		<br>
 		<a href="#headervid" id="watch" class="watch">Watch the video</a>
@@ -85,7 +85,7 @@
 
 <div class="yosemite-cont cont">
 	<div class="yosemite-int int">
-		<h3>Breaking lets you add <br> news feeds to your Today view</h3>
+		<h3>Breaking lets you add <br>&nbsp;news feeds to your Today view</h3>
 		<p>Add local news, your favorite blogs or anything else that comes with a feed as a Today view widget in OS X Yosemite &amp; iOS 8. Breaking is an easy, uncluttered way of staying on top of what’s new in your world.</p>
 		{{{ img "interface-osx.png" true "interface" }}}
 	</div>
