Added privacy and copyright notice

--- a/assets/css/sections/_footer.scss
+++ b/assets/css/sections/_footer.scss
@@ -15,6 +15,13 @@
 		text-align: right;
 	}
 
+	.legal {
+		color: #8a8984;
+		font-size: 11pt;
+		line-height: 15pt;
+		margin-top: 40px;
+	}
+
 	h4, p, a {
 		color: #252525;
 	}
