--- a/index.handlebars
+++ b/index.handlebars
@@ -247,6 +247,7 @@
 				class="button press"
 				onClick="sendEvent('button', 'clicked', 'presspackage');">Press Package</a>
 		</div>
+		<p class="legal">&copy; Robocat. All Rights Reserved. <a href="/privacy/">Privacy Policy</a>.</p>
 	</div>
 </div>
 
