Added tips page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,3 +31,4 @@ $sidebar-width: 320px;
 @import "sections/features";
 @import "sections/download";
 @import "sections/footer";
+@import "sections/tips";
