--- a/partials/header.handlebars
+++ b/partials/header.handlebars
@@ -27,7 +27,7 @@
         <meta name="twitter:app:name:iphone" content="Breaking">
         <meta name="twitter:app:id:iphone" content="953959186">
     	
-        <link rel='stylesheet' href='css/main.css'>
+        <link rel='stylesheet' href='/css/main.css'>
 
         {{> reload }}
     
