--- a/partials/footer.handlebars
+++ b/partials/footer.handlebars
@@ -11,8 +11,8 @@
 	  ga('send', 'pageview');
 
 	</script>
-	<script src="js/vendor.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/app.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="/js/vendor.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/app.js" type="text/javascript" charset="utf-8" async defer></script>
 	<script>
           window.fbAsyncInit = function() {
             FB.init({
