Added reviews section

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,3 +32,4 @@ $sidebar-width: 320px;
 @import "sections/download";
 @import "sections/footer";
 @import "sections/tips";
+@import "sections/reviews";
