--- a/index.handlebars
+++ b/index.handlebars
@@ -188,6 +188,62 @@
 	</div>
 </div>
 
+<div class="reviews-cont cont">
+	<div class="reviews int">
+		<div class="review">
+			<div class="stars">
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+			</div>
+
+			<p class="quote">“It's a neat app and one we highly recommend to folk who enjoy reading up on various topics.”</p>
+			<a target="_blank" href="http://www.imore.com/new-breaking-app-delivers-news-your-iphone-and-mac" class="author">- Rich Edmonds, Imore</a>
+		</div>
+
+		<div class="review">
+			<div class="stars">
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+			</div>
+
+			<p class="quote">“With Breaking from Robocat, staying on top of your favorite sites has never been easier.”</p>
+			<a target="_blank" href="http://appadvice.com/review/breaking-news-in-your-today-tab" class="author">- Christine Chang, AppAdvice</a>
+		</div>
+
+		<div class="review">
+			<div class="stars">
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+			</div>
+
+			<p class="quote">“Breaking is an easy, uncluttered way of staying on top of what’s new in your world – marrying the accessibility of the today view with the power of RSS feeds.”</p>
+			<a target="_blank" href="https://blog.agilebits.com/app/breaking-news-in-your-today-view/" class="author">- Agile Bits</a>
+		</div>
+
+		<div class="review">
+			<div class="stars">
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+			</div>
+
+			<p class="quote">Breaking is really simple to use, and essentially works as a set it and forget it app.”</p>
+			<a target="_blank" href="http://beautifulpixels.com/mac/breaking-a-today-widget-for-your-favorite-rss-feeds/?utm_content=buffer43e18&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer" class="author">- Preshit Deorukhkar, Beautiful Pixels</a>
+		</div>
+	</div>
+</div>
+
 <div class="download-cont cont">
 	<div class="download-int int">
 		<h3>Start scanning the news</h3>
