Removed wrong quote

--- a/index.handlebars
+++ b/index.handlebars
@@ -225,11 +225,11 @@
 				<div class="star"></div>
 			</div>
 
-			<p class="quote">“Breaking is an easy, uncluttered way of staying on top of what’s new in your world – marrying the accessibility of the today view with the power of RSS feeds.”</p>
-			<a target="_blank" href="https://blog.agilebits.com/app/breaking-news-in-your-today-view/" class="author">- Agile Bits</a>
+			<p class="quote">Breaking is really simple to use, and essentially works as a set it and forget it app.”</p>
+			<a target="_blank" href="http://beautifulpixels.com/mac/breaking-a-today-widget-for-your-favorite-rss-feeds/?utm_content=buffer43e18&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer" class="author">- Preshit Deorukhkar, Beautiful Pixels</a>
 		</div>
 
-		<div class="review">
+		{{!-- <div class="review">
 			<div class="stars">
 				<div class="star"></div>
 				<div class="star"></div>
@@ -238,9 +238,11 @@
 				<div class="star"></div>
 			</div>
 
-			<p class="quote">Breaking is really simple to use, and essentially works as a set it and forget it app.”</p>
-			<a target="_blank" href="http://beautifulpixels.com/mac/breaking-a-today-widget-for-your-favorite-rss-feeds/?utm_content=buffer43e18&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer" class="author">- Preshit Deorukhkar, Beautiful Pixels</a>
-		</div>
+			<p class="quote">“Breaking is an easy, uncluttered way of staying on top of what’s new in your world – marrying the accessibility of the today view with the power of RSS feeds.”</p>
+			<a target="_blank" href="https://blog.agilebits.com/app/breaking-news-in-your-today-view/" class="author">- Agile Bits</a>
+		</div> --}}
+
+		
 	</div>
 </div>
 
