Added whats new

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,4 +32,5 @@ $sidebar-width: 320px;
 @import "sections/download";
 @import "sections/footer";
 @import "sections/tips";
+@import "sections/whatsnew";
 @import "sections/reviews";
