--- a/assets/css/sections/_tips.scss
+++ b/assets/css/sections/_tips.scss
@@ -4,46 +4,19 @@
 	// width: $pages * 100vw;
 	padding-bottom: 30px;
 
-	.tip {
-		// float: left;
+	.version {
 		padding: 0 40px;
-		text-align: center;
-		width: 100vw;
-
-		.icon {
-			// margin-bottom: 30px;
-			margin-top: 30px;
-		}
-
-		.title, .index {
-			color: #373737;
-		}
 
 		.title {
+			color: #373737;
 			font-weight: 200;
 			margin-top: 0;
 			margin-bottom: 10px;
 		}
 
-		.index {
-			text-transform: uppercase;
-			font-weight: bold;
-			font-size: 11pt;
-		}
-
 		.description {
 			color: #4d4340;
 			margin-bottom: 30px;
-		}
-
-		.button {
-			border: 1px solid #ff5a1e;
-			border-radius: 5px;
-			color: #000;
-			display: inline-block;
-			font-size: 14pt;
-			padding: 16px 40px;
-			text-decoration: none;
 		}
 	}
 }
